<resources>
    <string name="app_name">PopMovies</string>

    <string name="movie_picture_content_description">Movie cover</string>
    <string name="company_picture_content_description">Movie cover</string>
    <string name="movie_error_picture_content_description">Movie load error</string>
    <string name="movie_title">Title:</string>
    <string name="movie_duration">Duration:</string>
    <string name="movie_country">Country:</string>
    <string name="movie_users_reviews">Reviews:</string>
    <string name="movie_users_reviews_author">Author:</string>
    <string name="movie_trailers">Youtube Trailers:</string>
    <string name="movie_release_date">Release Date:</string>
    <string name="movie_genre">Genre:</string>
    <string name="movie_audio">Audio:</string>
    <string name="movie_original_language">Language:</string>
    <string name="movie_actors">Actors:</string>
    <string name="movie_rating">Vote Rating:</string>
    <string name="movie_budget">Budget:</string>
    <string name="movie_revenue">Revenue:</string>
    <string name="movie_home_page">Homepage:</string>

    <string name="movie_filter_popular">Popular</string>
    <string name="movie_filter_top_rated">Top Rated</string>
    <string name="movie_filter_favorite">Favorite</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="delete_from_favorite">Delete From Favorite</string>


    <string name="retry">Retry</string>
    <string name="connection_error_message">You have some problems with connection. Please, try again!</string>
    <string name="youtube_error_message">Sorry but Youtube is not available on your device</string>
    <string name="auth_or_not_found_http_error">Http Error! Please check your API key or try again</string>
    <string name="empty_favorite_movies_list_error">Your Favorite Movies list is empty!!!</string>
</resources>
